--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+## [1.0.10 - 1.0.15] - 2016-10-30
+### Changed
+- Build process changed
+- Dependencies was updated
 ## [1.0.9] - 2016-10-30
 ### Changed
 - Rename to CSDebug
