--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,34 +1,53 @@
+## [1.0.20] - 2016-12-05
+### Changed
+- Test and coverage was added
+
+## [1.0.16 - 1.0.19] - 2016-10-30
+### Changed
+- Build process changed
+- Dependencies was removed
+
 ## [1.0.10 - 1.0.15] - 2016-10-30
 ### Changed
 - Build process changed
 - Dependencies was updated
+
 ## [1.0.9] - 2016-10-30
 ### Changed
 - Rename to CSDebug
+
 ## [1.0.8] - 2016-10-30
 ### Changed
 - Document scope was fixed
+
 ## [1.0.7] - 2016-10-30
 ### Changed
 - Dependencies was fixed
+
 ## [1.0.6] - 2016-10-30
 ### Changed
 - Dependencies was fixed
+
 ## [1.0.5] - 2016-10-30
 ### Changed
 - Dependencies was fixed
+
 ## [1.0.4] - 2016-10-30
 ### Changed
 - Window scope was fixed
+
 ## [1.0.3] - 2016-10-30
 ### Changed
 - Bug fix
+
 ## [1.0.2] - 2016-10-30
 ### Changed
 - Bug fix
+
 ## [1.0.1] - 2016-10-30
 ### Changed
 - Relocated to npm modules
+
 ## [1.0.0] - 2016-10-23
 ### Changed
 - Initial commit
