--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,13 @@
+## [1.0.21] - 2016-12-06
+### Changed
+- Typing declarations was added
+- Dependencies was updated
+
 ## [1.0.20] - 2016-12-05
 ### Changed
 - Test and coverage was added
 
-## [1.0.16 - 1.0.19] - 2016-10-30
+## [1.0.16 - 1.0.19] - 2016-11-25
 ### Changed
 - Build process changed
 - Dependencies was removed
